Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html lang ="en">
-  <!--this sets the language>
+  
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>MY FIRST HTML SCRIPT</title>
 </head>
+
 <body>
+
 </body>
+
 </html>
